--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@jest/globals": "^29.6.1",
+    "@swc/jest": "^0.2.29",
     "@types/jest": "^29.5.3",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
@@ -52,7 +53,6 @@
     "jest": "^29.6.1",
     "prettier": "^3.0.0",
     "prettier-plugin-organize-imports": "^3.2.3",
-    "ts-jest": "^29.1.1",
     "typescript": "^5.1.6"
   }
 }
