--- a/package.json
+++ b/package.json
@@ -33,21 +33,21 @@
     "prepublishOnly": "tsc -p tsconfig.build.json"
   },
   "devDependencies": {
-    "@jest/globals": "^29.6.1",
-    "@swc/jest": "^0.2.29",
-    "@types/jest": "^29.5.3",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
+    "@vitest/coverage-v8": "^1.5.2",
     "eslint": "^8.45.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jest": "^28.0.0",
     "eslint-plugin-n": "^17.0.0",
     "eslint-plugin-promise": "^6.1.1",
-    "jest": "^29.6.1",
+    "eslint-plugin-vitest": "^0.4.1",
     "prettier": "^3.0.0",
     "prettier-plugin-organize-imports": "^3.2.3",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "vite": "^5.2.10",
+    "vite-tsconfig-paths": "^4.3.2",
+    "vitest": "^1.5.2"
   }
 }
