Use module path alias in tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,9 @@
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
     "noEmitOnError": true,
+    "paths": {
+      "fake-permissions": ["./src/index.ts"]
+    },
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
