Use `@types/web`

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "prepublishOnly": "tsc -p tsconfig.build.json"
   },
   "devDependencies": {
+    "@types/web": "^0.0.151",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
     "@vitest/coverage-v8": "^1.5.2",
