--- a/package.json
+++ b/package.json
@@ -33,20 +33,21 @@
     "prepublishOnly": "tsc -p tsconfig.build.json"
   },
   "devDependencies": {
+    "@eslint/js": "^9.24.0",
     "@types/web": "^0.0.215",
-    "@typescript-eslint/eslint-plugin": "^8.0.0",
-    "@typescript-eslint/parser": "^8.0.0",
     "@vitest/coverage-v8": "^3.0.0",
-    "eslint": "^8.45.0",
-    "eslint-config-prettier": "^10.0.0",
-    "eslint-import-resolver-typescript": "^4.0.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^17.0.0",
-    "eslint-plugin-promise": "^7.0.0",
-    "eslint-plugin-vitest": "^0.4.1",
+    "@vitest/eslint-plugin": "^1.1.39",
+    "eslint": "^9.24.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-import-resolver-typescript": "^4.3.1",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-n": "^17.17.0",
+    "eslint-plugin-promise": "^7.2.1",
+    "globals": "^16.0.0",
     "prettier": "^3.0.0",
     "prettier-plugin-organize-imports": "^4.0.0",
     "typescript": "^5.1.6",
+    "typescript-eslint": "^8.29.0",
     "vite-tsconfig-paths": "^5.0.0",
     "vitest": "^3.0.0"
   }
