--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "prepublishOnly": "tsc -p tsconfig.build.json"
   },
   "devDependencies": {
+    "@arethetypeswrong/cli": "^0.17.4",
     "@eslint/js": "^9.24.0",
     "@types/web": "^0.0.225",
     "@vitest/coverage-v8": "^3.0.0",
