--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "globals": "^16.0.0",
     "prettier": "^3.0.0",
     "prettier-plugin-organize-imports": "^4.0.0",
+    "publint": "^0.3.12",
     "typescript": "^5.1.6",
     "typescript-eslint": "^8.29.0",
     "vite-tsconfig-paths": "^5.0.0",
