--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "@arethetypeswrong/cli": "^0.17.4",
     "@eslint/js": "^9.24.0",
+    "@skypack/package-check": "^0.2.2",
     "@types/web": "^0.0.225",
     "@vitest/coverage-v8": "^3.0.0",
     "@vitest/eslint-plugin": "^1.1.39",
