--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "prettier-plugin-organize-imports": "^4.0.0",
     "publint": "^0.3.12",
     "typedoc": "^0.28.3",
+    "typedoc-plugin-mdn-links": "^5.0.1",
     "typescript": "^5.1.6",
     "typescript-eslint": "^8.29.0",
     "vite-tsconfig-paths": "^5.0.0",
